--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <img src="imagens/avatar1.jpeg" alt="avatar" width="200">
         <p>Eu sou a professora Caroline</p>
         <h1>Eu ensino programação</h1>
         <p>Moro em Bandeirantes, sou formada em Processamento de Dados e Pedagogia. Leciono Programação e Robótica e Pensamento Computacional</p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-        </ul>
+        
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+            <span>Python</span>
+        
     </header>
+    <main>
+
+    </main>
+    <footer>
+        <h2>Entre em contato</h2>
+        <a href="https://github.com/prof-cmm/portfolio">GitHub</a>
+        <p>Produzido por Professora Caroline</p>
+    </footer>
 
 </body>
 </html>
