--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
         
     </header>
     <main>
-
+        <section>
+            <div>
+                <img src="imagens/projeto-1.png" alt="">
+                <h3>Projeto 1</h3>
+                <p>Descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+            <div>
+                <img src="imagens/projeto-2.png" alt="">
+                <h3>Projeto 2</h3>
+                <p>Descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+            <div>
+                <img src="imagens/projeto-3.png" alt="">
+                <h3>Projeto 3</h3>
+                <p>Descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+        </section>
     </main>
     <footer>
         <h2>Entre em contato</h2>
