--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <img src="imagens/avatar1.jpeg" alt="avatar" width="200">
         <p>Eu sou a professora Caroline</p>
-        <h1>Eu ensino programação</h1>
+        <h1>Oi <b id="nome">Fulano</b>, eu ensino programação</h1>
         <p>Moro em Bandeirantes, sou formada em Processamento de Dados e Pedagogia. Leciono Programação e Robótica e Pensamento Computacional</p>
         
             <span>HTML</span>
@@ -46,6 +46,8 @@
         <a href="https://github.com/prof-cmm/portfolio">GitHub</a>
         <p>Produzido por Professora Caroline</p>
     </footer>
+   
+    <script src="script.js"></script>
 
 </body>
 </html>
